--- a/app/src/main/res/layout/item_rss_feed.xml
+++ b/app/src/main/res/layout/item_rss_feed.xml
@@ -31,5 +31,5 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorAccent" />
+        android:background="@color/colorPrimary" />
 </LinearLayout>
