--- a/app/src/main/res/drawable/gradient_background_landscape.xml
+++ b/app/src/main/res/drawable/gradient_background_landscape.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    Christopher Conlan
+    Created On: 20/04/2020
+    Student No: S1512271
+    Mobile Platform Development Coursework
+-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
